🐛fix bug(style.css) fix card size on mobile

--- a/style.css
+++ b/style.css
@@ -407,6 +407,10 @@ nav{
         font-size: 12px;
     }
 
+    .card {
+        width: 60%;
+    }
+
     .f1 {
         width: 80%;
     }
